--- a/project/Makefile
+++ b/project/Makefile
@@ -1,6 +1,6 @@
 # Definindo o compilador e as flags
 CXX = g++
-CXXFLAGS = -Wall -Iinclude
+CXXFLAGS = -g -Wall -Iinclude
 
 # Diretórios
 SRCDIR = src
@@ -10,24 +10,35 @@ BINDIR = bin
 
 # Arquivos fonte e objetos
 SOURCES = $(wildcard $(SRCDIR)/*.cpp) \
-          $(wildcard $(SRCDIR)/JogoDeTabuleiro/*.cpp) \
+          $(wildcard $(SRCDIR)/Tabuleiro/*.cpp) \
           $(wildcard $(SRCDIR)/Reversi/*.cpp) \
           $(wildcard $(SRCDIR)/Lig4/*.cpp) \
           $(wildcard $(SRCDIR)/Jogador/*.cpp)
 
 OBJECTS = $(patsubst $(SRCDIR)/%.cpp, $(OBJDIR)/%.o, $(SOURCES))
-EXECUTABLE = $(BINDIR)/projeto_final
+EXECUTABLE = $(BINDIR)/teste
 
 # Alvo padrão
-all: $(BINDIR) $(OBJDIR) $(EXECUTABLE)
+all: $(BINDIR) $(OBJDIR) $(OBJDIR)\Tabuleiro $(OBJDIR)\Reversi $(OBJDIR)\Lig4 $(OBJDIR)\Jogador $(EXECUTABLE)
 
-# Criação do diretório bin se não existir
+# Criação dos diretórios bin e obj se não existirem
 $(BINDIR):
-	mkdir -p $(BINDIR)
+	if not exist $(BINDIR) mkdir $(BINDIR)
 
-# Criação do diretório obj se não existir
 $(OBJDIR):
-	mkdir -p $(OBJDIR)
+	if not exist $(OBJDIR) mkdir $(OBJDIR)
+
+$(OBJDIR)\Tabuleiro:
+	if not exist $(OBJDIR)\Tabuleiro mkdir $(OBJDIR)\Tabuleiro
+
+$(OBJDIR)\Reversi:
+	if not exist $(OBJDIR)\Reversi mkdir $(OBJDIR)\Reversi
+
+$(OBJDIR)\Lig4:
+	if not exist $(OBJDIR)\Lig4 mkdir $(OBJDIR)\Lig4
+
+$(OBJDIR)\Jogador:
+	if not exist $(OBJDIR)\Jogador mkdir $(OBJDIR)\Jogador
 
 # Linkagem do executável
 $(EXECUTABLE): $(OBJECTS)
@@ -39,10 +50,12 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.cpp
 
 # Limpeza dos arquivos compilados
 clean:
-	rm -rf $(OBJDIR) $(BINDIR)
+	if exist $(OBJDIR) rmdir /S /Q $(OBJDIR)
+	if exist $(BINDIR) rmdir /S /Q $(BINDIR)
 
 # Remoção dos arquivos compilados, mas mantendo os diretórios
 clean-objects:
-	rm -f $(OBJDIR)/*.o $(EXECUTABLE)
+	del /Q $(OBJDIR)\*.o
+	del /Q $(EXECUTABLE)
 
 .PHONY: all clean clean-objects
